--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,8 @@
 
     {% block corecss %}
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'blog/main.css' %}">
     {% endblock %}
@@ -26,10 +27,17 @@
 
     {% block corejs %}
     <script src="https://kit.fontawesome.com/53108b937c.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <!-- Stripe -->
+    <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
 
     {% if title %}
@@ -44,7 +52,7 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark nav fixed-top">
             <div class="container">
-                              
+
                 <a class="navbar-brand mr-4" href="{% url 'home' %}">Bang Bang</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
                     aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,24 +70,27 @@
                         <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
                         <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                         <a class="nav-item nav-link" href="{% url 'account_logout' %}">Logout</a>
-                        
-                        {% else %}
-                        <a class="nav-item nav-link" href="{% url 'account_login' %}">Login</a>
-                        <a class="nav-item nav-link" href="{% url 'account_signup' %}">Register</a>
-                       
-                     <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                         <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
+                        <div><i class="fas fa-shopping-bag fa-lg"></i></div>
+                        <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
+                            href="{% url 'view_bag' %}">
                             <div class="text-center">
-                              
                                 <p class="my-0">
                                     {% if grand_total %}
-                                        ${{ grand_total|floatformat:2 }}
+                                    ${{ grand_total|floatformat:2 }}
                                     {% else %}
-                                        $0.00
+                                    $0.00
                                     {% endif %}
                                 </p>
                             </div>
                         </a>
+
+                        {% else %}
+                        <a class="nav-item nav-link" href="{% url 'account_login' %}">Login</a>
+                        <a class="nav-item nav-link" href="{% url 'account_signup' %}">Register</a>
+
+
+
+
 
                         {% endif %}
                     </div>
@@ -88,7 +99,7 @@
         </nav>
     </header>
     <div class="delivery-banner">
-        <h4 class="logo-font my-1">Free delivery on orders over ${{ free_shipping_threshold }}!</h4>   
+        <h4 class="logo-font my-1">Free delivery on orders over ${{ free_shipping_threshold }}!</h4>
     </div>
 
     <main role="main" class="container-fluid px-0">
@@ -101,12 +112,12 @@
                 </div>
                 {% endfor %}
                 {% endif %}
-                  {% block content %}{% endblock %} {% include 'includes/main-nav.html' %}
-    {% block postloadjs %}    {% endblock %}
-              
-            </div>   
+                {% block content %}{% endblock %} {% include 'includes/main-nav.html' %}
+                {% block postloadjs %} {% endblock %}
+
+            </div>
         </div>
     </main>
 </body>
-</html>
 
+</html>
